--- a/package.json
+++ b/package.json
@@ -4,19 +4,33 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "ts-node ./src/server.ts",
+    "start": "node dist/server.js",
+    "build": "tsup ./src/server.ts --format cjs,esm",
+    "test": "jest",
     "pros-install": "prisma generate"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20.12.12",
+    "@types/supertest": "^6.0.2",
+    "jest": "^29.7.0",
     "prisma": "^5.14.0",
+    "supertest": "^7.0.0",
+    "ts-jest": "^29.1.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@prisma/client": "5.14.0"
+    "@prisma/client": "5.14.0",
+    "cors": "^2.8.5",
+    "express": "^4.19.2",
+    "tsconfig-paths": "^4.2.0",
+    "tsup": "^8.0.2"
   }
 }
