--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src"],
+  "include": ["src", "tests"],
   "exclude": ["node_modules"]
 }
