--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "tsconfig-paths": "^4.2.0",
-    "tsup": "^8.0.2"
+    "tsup": "^8.0.2",
+    "zod": "^3.23.8"
   }
 }
