--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node ./src/server.ts",
+    "seed": "ts-node prisma/seed.ts",
     "start": "node dist/server.js",
     "build": "tsup ./src/server.ts --format cjs,esm",
     "test": "jest",
